Added pics to recipes, and filled coffee recipe

--- a/recipes/pourover.html
+++ b/recipes/pourover.html
@@ -7,5 +7,25 @@
     </head>
     <body>
         <h1>Pour Over Coffee</h1>
+        <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\pour-over.jpg">
+        <h3>Description</h3>
+          <p>I really love coffee, all types. My favorite of all is a very classic pour over.</p>
+          <p>In the following sections i'll explain ingredients and my way of making pour over coffee, to hopefully inspire others to try something new</p>
+        <h3>Ingredients</h3>
+          <ul>
+            <li>30g Ground coffee beans, either freshly ground or pre-ground (medium-coarse)</li>
+            <li>578g Filtered water heated to 200 degrees Fahrenheit (93.333 Celcius)</li>
+            <li>Pinch of salt</li>
+            <li>A pour over device (having a permanent filter or paper filter does little to change the taste, so personal preference on that purchase)</li>
+          </ul>
+        <h3>Steps</h3>
+          <ol>
+            <li>Heat water to 200 degrees Fahrenheit</li>
+            <li>Pre-heat pour over container with some of the heated water and empty</li>
+            <li>Place filter onto pour over device, and add the coffee grounds and salt to the filter</li>
+            <li>In an even swirling motion pour some water over the grounds (just enough to ensure all grounds are wet), and wait 30 secs for coffee grounds to bloom</li>
+            <li>After the 30 secs begin pouring water over coffee grounds in an even swirling motion again, taking breaks to not pour too much and over/under extract coffee</li>
+            <li>After all of the water is through the grounds, take the filter container off the pour over device and enjoy your freshly brewed coffee!</li>
+          </ol>
     </body>
 </html>
