--- a/recipes/sazerac.html
+++ b/recipes/sazerac.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>The Sazerac</h1>
+        <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\sazerac.jpg">
     </body>
 </html>
