--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\coffee.jpg">
+        <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\cocktails.jpg">
         <ul>
           <li><a href="recipes/pourover.html">Pour Over Coffee</a></li>
-          <li><a href="recipes/hemingway.html"></a></li>
-          <li><a href="recipes/sazerac.html"></a></li>
+          <li><a href="recipes/hemingway.html">The Hemingway Daiquiri</a></li>
+          <li><a href="recipes/sazerac.html">The Sazerac</a></li>
         </ul>
     </body>
