--- a/recipes/hemingway.html
+++ b/recipes/hemingway.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>The Hemingway Daiquiri</h1>
+        <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\hemingway.jpg">
     </body>
 </html>
