Added recipe for the hemingway

--- a/recipes/hemingway.html
+++ b/recipes/hemingway.html
@@ -8,5 +8,24 @@
     <body>
         <h1>The Hemingway Daiquiri</h1>
         <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\hemingway.jpg">
+        <h3>Description</h3>
+          <p>I'm a bartender full time while I learn to code, and this is one of my favorite cocktails to make</p>
+          <p>It's named after the famouos author, and tastes sweet yet dry, tangy yet refreshing. This is something that could be enjoyed all year round</p>
+        <h3>Ingredients</h3>
+          <ul>
+            <li>A coupe or martini glass</li>
+            <li>Cocktail tins and cocktail strainer</li>
+            <li>2 oz white rum</li>
+            <li>3/4 oz lime juice</li>
+            <li>1/2 oz maraschino liqueur</li>
+            <li>1/2 oz grapefruit juice</li>
+            <li>Lime wheel for garnish</li>
+          </ul>
+        <h3>Steps</h3>
+          <ol>
+            <li>To your cocktail tins add ice and all of the ingredients except the lime wheel, and shake until well chilled</li>
+            <li>Strain into your coupe or martini glass</li>
+            <li>Garnish with the lime wheel</li>
+          </ol>
     </body>
 </html>
