Filled out sazerac reicpe

--- a/recipes/sazerac.html
+++ b/recipes/sazerac.html
@@ -8,5 +8,28 @@
     <body>
         <h1>The Sazerac</h1>
         <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\sazerac.jpg">
+        <h3>Description</h3>
+          <p>The sazerac is neck and neck with the hemingway as one of my favorite cocktails</p>
+          <p>I love how boozy it is and it offers many different flavor profiles if you change the base spirit to a cognac, or even a bourbon</p>
+        <h3>Ingredients</h3>
+          <ul>
+            <li>A rocks glass</li>
+            <li>A mixing glass (or a pint glass will do)</li>
+            <li>A bar spoon (can use anything to mix the cocktail at home)</li>
+            <li>A cocktail strainer</li>
+            <li>Absinthe to rinse</li>
+            <li>1/2 oz simple syrup</li>
+            <li>4 dashes peychaud's bitters</li>
+            <li>2 oz rye whiskey</li>
+            <li>Lemon peel for a garnish</li>
+          </ul>
+        <h3>Steps</h3>
+          <ol>
+            <li>Rinse a chilled rocks glass with absinthe, discarding the excess and setting the glass aside</li>
+            <li>In your mixing glass, add the whiskey, simple syrup, peychaud's bitters, and ice</li>
+            <li>Stir until well chilled</li>
+            <li>Strain the cocktail into the prepared rocks glass</li>
+            <li>Express the lemon peel over the cocktail, rub it around the rim, drop it in the drink, and enjoy!</li>
+          </ol>
     </body>
 </html>
