Added links to go back to homepage

--- a/recipes/hemingway.html
+++ b/recipes/hemingway.html
@@ -28,4 +28,7 @@
             <li>Garnish with the lime wheel</li>
           </ol>
     </body>
+    <footer>
+        <a href="C:\Projects\TheOdinProject\repos\odin-recipes\index.html">Home</a>
+    </footer>
 </html>
