--- a/recipes/pourover.html
+++ b/recipes/pourover.html
@@ -28,4 +28,7 @@
             <li>After all of the water is through the grounds, take the filter container off the pour over device and enjoy your freshly brewed coffee!</li>
           </ol>
     </body>
+    <footer>
+        <a href="C:\Projects\TheOdinProject\repos\odin-recipes\index.html">Home</a>
+    </footer>
 </html>
