--- a/recipes/sazerac.html
+++ b/recipes/sazerac.html
@@ -32,4 +32,7 @@
             <li>Express the lemon peel over the cocktail, rub it around the rim, drop it in the drink, and enjoy!</li>
           </ol>
     </body>
+    <footer>
+        <a href="C:\Projects\TheOdinProject\repos\odin-recipes\index.html">Home</a>
+    </footer>
 </html>
