Fixed image links, added CSS

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin-recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\coffee.jpg">
-        <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\cocktails.jpg">
+        <img src="recipes\recipe-pics\coffee.jpg" alt="Coffee and coffee beans">
+        <img src="recipes\recipe-pics\cocktails.jpg" alt="Cocktails">
+        <div class="list">
         <ul>
           <li><a href="recipes/pourover.html">Pour Over Coffee</a></li>
           <li><a href="recipes/hemingway.html">The Hemingway Daiquiri</a></li>
           <li><a href="recipes/sazerac.html">The Sazerac</a></li>
         </ul>
+        </div>
     </body>
