--- a/recipes/hemingway.html
+++ b/recipes/hemingway.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>The Hemingway Daiquiri</h1>
-        <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\hemingway.jpg">
+        <img src="recipe-pics/hemingway.jpg" alt="The Hemingway Daiquiri">
         <h3>Description</h3>
           <p>I'm a bartender full time while I learn to code, and this is one of my favorite cocktails to make</p>
           <p>It's named after the famouos author, and tastes sweet yet dry, tangy yet refreshing. This is something that could be enjoyed all year round</p>
@@ -29,6 +29,6 @@
           </ol>
     </body>
     <footer>
-        <a href="C:\Projects\TheOdinProject\repos\odin-recipes\index.html">Home</a>
+        <a href="index.html">Home</a>
     </footer>
 </html>
