--- a/recipes/pourover.html
+++ b/recipes/pourover.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Pour Over Coffee</h1>
-        <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\pour-over.jpg">
+        <img src="recipe-pics/pour-over.jpg" alt="Pour Over Coffee">
         <h3>Description</h3>
           <p>I really love coffee, all types. My favorite of all is a very classic pour over.</p>
           <p>In the following sections i'll explain ingredients and my way of making pour over coffee, to hopefully inspire others to try something new</p>
@@ -29,6 +29,6 @@
           </ol>
     </body>
     <footer>
-        <a href="C:\Projects\TheOdinProject\repos\odin-recipes\index.html">Home</a>
+        <a href="index.html">Home</a>
     </footer>
 </html>
