--- a/recipes/sazerac.html
+++ b/recipes/sazerac.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>The Sazerac</h1>
-        <img src="C:\Projects\TheOdinProject\repos\odin-recipes\recipes\recipe-pics\sazerac.jpg">
+        <img src="recipe-pics/sazerac.jpg" alt="Sazerac">
         <h3>Description</h3>
           <p>The sazerac is neck and neck with the hemingway as one of my favorite cocktails</p>
           <p>I love how boozy it is and it offers many different flavor profiles if you change the base spirit to a cognac, or even a bourbon</p>
@@ -33,6 +33,6 @@
           </ol>
     </body>
     <footer>
-        <a href="C:\Projects\TheOdinProject\repos\odin-recipes\index.html">Home</a>
+        <a href="index.html">Home</a>
     </footer>
 </html>
